interface Color {
    void aplicar();
}
