abstract class Forma {

    protected Color color;

    protected Forma(Color color) {
        this.color = color;
    }

    abstract void dibujar();
}
